--- a/gb/17/3/11/n8897574.md
+++ b/gb/17/3/11/n8897574.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xqeisj344/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xqeisj344/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/xqeisj344/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xqeisj344/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/xqeisj344/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xqeisj344/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/xqeisj344/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xqeisj344/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/xqeisj344/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xqeisj344/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/xqeisj344/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xqeisj344/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/xqeisj344/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xqeisj344/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/xqeisj344/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xqeisj344/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/xqeisj344/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xqeisj344/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/xqeisj344/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xqeisj344/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/xqeisj344/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/xqeisj344/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/xqeisj344/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/xqeisj344/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/xqeisj344/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/xqeisj344/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/xqeisj344/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/xqeisj344/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/xqeisj344/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/xqeisj344/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/xqeisj344/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/xqeisj344/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/xqeisj344/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/xqeisj344/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/xqeisj344/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/xqeisj344/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/xqeisj344/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/xqeisj344/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/xqeisj344/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/xqeisj344/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/xqeisj344/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/xqeisj344/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/xqeisj344/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/xqeisj344/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/xqeisj344/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/xqeisj344/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/xqeisj344/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>百年一遇暴雨 反致奥克兰自来水荒</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/07/0484f39860f2616dc9fa121b2e5587f0-320x200.png" />
+
 <h6></h6>
 <hr>
-	<p>【大纪元2017年03月11日讯】（大纪元记者韩香茗综合报导）因遭遇百年一遇的<ahref="https://github.com/xqeisj344/djy/blob/master/gb/tag/%E6%9A%B4%E9%9B%A8.md#1">暴雨</a>袭击，<ahref="https://github.com/xqeisj344/djy/blob/master/gb/tag/%E5%A5%A5%E5%85%8B%E5%85%B0.md#1">奥克兰</a>自来水处理能力大大降低，致使该市面临23年不遇的水荒。自来水公司警告说，如市民不减少用水，可能因供应不足而不得不调用非完全处理水，但那样的话，水质将无法达到饮用水标准，市民将不得不煮水。</p>
-<p>3月10日，<ahref="https://github.com/xqeisj344/djy/blob/master/gb/tag/%E5%A5%A5%E5%85%8B%E5%85%B0.md#1">奥克兰</a>最大自来水公司（Watercare）向民众公布了自来水供应情况，同时敦促市民在本周的<ahref="https://github.com/xqeisj344/djy/blob/master/gb/tag/%E6%9A%B4%E9%9B%A8.md#1">暴雨</a>过后，在3月底前每人每天减少20升用水量；不然的话，该公司将不得不发布把水煮沸的通知。</p>
-<p>该公司表示，这是1994年（干旱）以来，<ahref="https://github.com/xqeisj344/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>最大城市首次限水。正常情况下，奥克兰人平均每人每天消耗160升水，全市每天耗水量约为4.5亿升。自周四（8日）宣布节水后，用水量已经降至4.2亿升（减少了3000万升），但还需减少更多。目前设定的节水目标为每天4亿升，即每天减少5000万升。</p>
+	<p>【大纪元2017年03月11日讯】（大纪元记者韩香茗综合报导）因遭遇百年一遇的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%9A%B4%E9%9B%A8.md#1">暴雨</a>袭击，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A5%A5%E5%85%8B%E5%85%B0.md#1">奥克兰</a>自来水处理能力大大降低，致使该市面临23年不遇的水荒。自来水公司警告说，如市民不减少用水，可能因供应不足而不得不调用非完全处理水，但那样的话，水质将无法达到饮用水标准，市民将不得不煮水。</p>
+<p>3月10日，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A5%A5%E5%85%8B%E5%85%B0.md#1">奥克兰</a>最大自来水公司（Watercare）向民众公布了自来水供应情况，同时敦促市民在本周的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%9A%B4%E9%9B%A8.md#1">暴雨</a>过后，在3月底前每人每天减少20升用水量；不然的话，该公司将不得不发布把水煮沸的通知。</p>
+<p>该公司表示，这是1994年（干旱）以来，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>最大城市首次限水。正常情况下，奥克兰人平均每人每天消耗160升水，全市每天耗水量约为4.5亿升。自周四（8日）宣布节水后，用水量已经降至4.2亿升（减少了3000万升），但还需减少更多。目前设定的节水目标为每天4亿升，即每天减少5000万升。</p>
 <p><strong>暴雨致水处理能力减半</strong></p>
 <p>本周的暴雨使Watercare公司的水处理能力降低了50%，原因是集水区注入了大量带有泥浆的水，使原水非常浑浊，看上去跟橘子水一样，大大增加了处理难度。不过，自来水公司表示，自来水质量并未因此而降低。</p>
 <p>该公司发言人马克·伯恩（Mark Bourne）说，水质并未受到影响，但问题在于集水量，不到24小时接收了两个月的降水量。这场暴雨非常罕见，自来水供应从未受到过这样的影响，他认为科学家和水分析师将最终证实目前的暴雨有多罕见。</p>
@@ -20,7 +20,7 @@
 <p>3月10日，奥克兰市长费尔·高夫（Phil Goff）在首都惠灵顿结束与总理英格利希（Bill English）的会晤后，立即返回奥克兰，并赶往Ardmore处理厂察看水情。</p>
 <p>高夫说，如果今晚的降雨造成更大压力的话，就要重新考虑Ardmore处理厂的水处理方式。本周的暴雨可能是百年一遇的，但如果因气候变化，这种情况变得更加常见的话，就需要采取新的措施了。</p>
 <p><strong>北岛上部遭遇百年一遇暴雨</strong></p>
-<p>据<ahref="https://github.com/xqeisj344/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>水与大气国家研究院（NIWA）证实，北岛上部遭遇的这场暴雨是百年一遇的，12小时内降雨量高达225毫米。</p>
+<p>据<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>水与大气国家研究院（NIWA）证实，北岛上部遭遇的这场暴雨是百年一遇的，12小时内降雨量高达225毫米。</p>
 <p>自周三凌晨起，奥克兰东南部地区遭遇暴雨洪水袭击，Clevedon镇很多居民被迫撤离家园，大量房产遭受损失，数千头牲畜被洪水卷走。截至周五夜晚，雷电交加的暴风雨已经造成奥克兰和北部地区（Northland）数千户家庭失去电力，多所学校及幼儿中心被关闭，部分地区火车、轮渡和公交服务受到影响。</p>
 <p>周五，气象服务部门MetService继续发出警告，提醒上部地区居民保持高度警惕，周日前仍有可能遭遇暴雨袭击。</p>
 <p><strong>奥克兰节水建议：</strong></p>
@@ -68,36 +68,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/xqeisj344/djy/blob/master/gb/11/3/8/n3191136.md#1">新西兰儿童蛀牙率居发达国家之首</a></li>
-<li><a href="https://github.com/xqeisj344/djy/blob/master/gb/12/10/16/n3707193.md#1">纽媒揭奥克兰超级都市管理者薪水丰厚</a></li>
-<li><a href="https://github.com/xqeisj344/djy/blob/master/gb/13/4/23/n3853488.md#1">暴雨闪电龙卷风  忙坏纽消防员</a></li>
-<li><a href="https://github.com/xqeisj344/djy/blob/master/gb/14/3/5/n4098516.md#1">基督城遭百年不遇水灾</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/3/8/n3191136.md#1">新西兰儿童蛀牙率居发达国家之首</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/12/10/16/n3707193.md#1">纽媒揭奥克兰超级都市管理者薪水丰厚</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/4/23/n3853488.md#1">暴雨闪电龙卷风  忙坏纽消防员</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/3/5/n4098516.md#1">基督城遭百年不遇水灾</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/3/n11630909.md#1" target="_blank">林辉：中共对万里长城的破坏与利用</a></li><li><a href="https://github.com/xqeisj344/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/16/n11726202.md#1" target="_blank">心灵升华 屏东法轮功学员见证大法美好</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/7/n9814027.md#1" target="_blank">十月革命百年 美重磅评论剖析共产主义罪恶</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/16/n11525726.md#1" target="_blank">密州狂欢节 市长：法轮大法给世界带来美好</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/xqeisj344/djy/blob/master/gb/20/7/18/n12265847.md#1">长江2号洪水来袭 官媒承认三峡大坝位移变形</a></li>
-<li><a href="https://github.com/xqeisj344/djy/blob/master/gb/20/7/17/n12263801.md#1">中共党员及家属或被美限入境 内部掀恐慌</a></li>
-<li><a href="https://github.com/xqeisj344/djy/blob/master/gb/20/7/17/n12264458.md#1">病情恶化放弃治疗 冯小刚排队买煎饼果子</a></li>
-<li><a href="https://github.com/xqeisj344/djy/blob/master/gb/20/7/17/n12264061.md#1">美“凌迟式”制裁 港亲共高官承认寒蝉效应</a></li>
-<li><a href="https://github.com/xqeisj344/djy/blob/master/gb/20/7/18/n12264878.md#1">大陆洪灾重创经济 导致供应链再度中断</a></li>
-<li><a href="https://github.com/xqeisj344/djy/blob/master/gb/20/7/16/n12261345.md#1">黄晓明频传婚变 官司判决书泄真相</a></li>
-<li><a href="https://github.com/xqeisj344/djy/blob/master/gb/20/7/17/n12263825.md#1">张玉嬿突现身 谢祖武见昔日旧爱吓到紧张起身</a></li>
-<li><a href="https://github.com/xqeisj344/djy/blob/master/gb/20/7/16/n12261898.md#1">拍综艺节目疑腰伤复发 赵丽颖蹲路边表情痛苦</a></li>
-<li><a href="https://github.com/xqeisj344/djy/blob/master/gb/20/7/17/n12264690.md#1">庆节目千集抛震撼弹 胡瓜：一二年内规划退休</a></li>
-<li><a href="https://github.com/xqeisj344/djy/blob/master/gb/20/7/18/n12266356.md#1">女歌手染疫牵连TVB百人 病毒攻入港娱乐圈</a></li>
-<li><a href="https://github.com/xqeisj344/djy/blob/master/gb/20/7/12/n12250053.md#1">《地仙传说》之王喜外传（一）</a></li>
-<li><a href="https://github.com/xqeisj344/djy/blob/master/gb/20/7/10/n12245489.md#1">【涛哥侃封神】第一回 纣王女娲宫进香（下）</a></li>
-<li><a href="https://github.com/xqeisj344/djy/blob/master/gb/20/7/17/n12264106.md#1">【馨香雅句】为何他们守护正体字</a></li>
-<li><a href="https://github.com/xqeisj344/djy/blob/master/gb/20/6/5/n12163902.md#1">【命理】影响婚姻的女命八字</a></li>
-<li><a href="https://github.com/xqeisj344/djy/blob/master/gb/8/11/17/n2331978.md#1">父子二人 忘怨感德</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690054.md#1">【车评】迷你快车 2022 MINI Cooper S</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689709.md#1">唐瑞讲故事｜朗读｜小熊维尼第五章</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688941.md#1">【秦鹏直播】乌克兰反攻开始？欧盟警告北京</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677160.md#1">早餐来一杯治愈大脑！清除脑雾的方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677259.md#1">5种抗炎又给人饱腹感的零食</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/xqeisj344/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/xqeisj344/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/3/11/n8897574.htm">百年一遇暴雨 反致奥克兰自来水荒</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/3/11/n8897574.htm">百年一遇暴雨 反致奥克兰自来水荒</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/xqeisj344/djy/blob/master/gb/17/3/11/n8897574.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/xqeisj344/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqeisj344/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/xqeisj344/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/xqeisj344/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xqeisj344/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqeisj344/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xqeisj344/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqeisj344/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/xqeisj344/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqeisj344/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xqeisj344/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqeisj344/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xqeisj344/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqeisj344/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xqeisj344/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqeisj344/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/xqeisj344/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqeisj344/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/xqeisj344/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqeisj344/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xqeisj344/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqeisj344/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xqeisj344/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqeisj344/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/xqeisj344/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqeisj344/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xqeisj344/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqeisj344/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/xqeisj344/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqeisj344/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xqeisj344/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqeisj344/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xqeisj344/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqeisj344/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xqeisj344/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqeisj344/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xqeisj344/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqeisj344/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xqeisj344/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqeisj344/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xqeisj344/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqeisj344/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xqeisj344/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqeisj344/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xqeisj344/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqeisj344/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xqeisj344/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqeisj344/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/17/3/11/n8897574.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
